--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
+  - {name: 🇨🇳 中国-15.91MB/s(Youtube:不良林), server: trojan.linkdns.xyz, port: 40208, type: trojan, password: 379105df-ad74-3c8a-ace3-5832de8f973a, sni: trojan.linkdns.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.05MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: 38.75.136.102, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-3.59MB/s(Youtube:不良林), server: 38.114.114.19, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-3.27MB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇦 加拿大-1.89MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-1.45MB/s(Youtube:不良林), server: aiajp1.game.www.klrxyru.cn, port: 1460, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 6f48efb9-3817-4652-832f-fd04d93ebbc1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇺🇸 美国-4.76MB/s(Youtube:不良林), server: 51.81.223.12, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.46MB/s(Youtube:不良林), server: 51.81.223.12, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.49MB/s(Youtube:不良林), server: 51.81.223.36, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.81MB/s(Youtube:不良林), server: 51.81.223.21, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.82MB/s(Youtube:不良林), server: 51.81.223.21, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.72MB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.24MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 27e58714-2c0b-4fa4-afb6-b91ec041b1cf, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
 rules:
